# VMAS

./: Cargo.toml  metrics.csv
examples/: example.rs
logs/: metrics_2025-04-07.csv  metrics_2025-04-08.csv  metrics_2025-04-09.csv  metrics_2025-04-10.csv  metrics_2025-04-11.csv  metrics_2025-04-12.csv
scripts/: reports.py
src/: main.rs
