[package]
name = "Visualizador-Metricas-Sistema"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
chrono = "0.4"
plotters = "0.3.7"
rusqlite = "0.26"
serde_json = "1.0"
windows-service = "0.7"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.29"

windows = { version = "0.56", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_Foundation"
] }


